--- a/Svc/FPManager/CMakeLists.txt.tmpl
+++ b/Svc/FPManager/CMakeLists.txt.tmpl
@@ -8,8 +8,11 @@
 ####
 set(SOURCE_FILES
   "\${CMAKE_CURRENT_LIST_DIR}/FPManager.fpp"
+  "\${CMAKE_CURRENT_LIST_DIR}/SMEvents.fpp"
   "\${CMAKE_CURRENT_LIST_DIR}/TlmDict.fppi"
   "\${CMAKE_CURRENT_LIST_DIR}/FPManagerImpl.cpp"
+  "\${CMAKE_CURRENT_LIST_DIR}/FPManagerSm.cpp"
+  "\${CMAKE_CURRENT_LIST_DIR}/FPManagerSm.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/Response.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/CommandSerializer.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/FPResponseTable.cpp"
@@ -24,6 +27,7 @@ register_fprime_module()
 # ### UTs ###
 set(UT_SOURCE_FILES
   "\${CMAKE_CURRENT_LIST_DIR}/FPManager.fpp"
+  "\${CMAKE_CURRENT_LIST_DIR}/SMEvents.fpp"
   "\${CMAKE_CURRENT_LIST_DIR}/test/ut/Tester.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/test/ut/TestMain.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/test/ut/ResponseExecutionRules.cpp"
