--- a/Svc/FPManager/CMakeLists.txt.tmpl
+++ b/Svc/FPManager/CMakeLists.txt.tmpl
@@ -16,6 +16,7 @@ set(SOURCE_FILES
   "\${CMAKE_CURRENT_LIST_DIR}/Response.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/CommandSerializer.cpp"
   "\${CMAKE_CURRENT_LIST_DIR}/FPResponseTable.cpp"
+  "\${CMAKE_CURRENT_LIST_DIR}/FPManagerSmBase.cpp"
 
   #for $response in $responses: 
      "\${CMAKE_CURRENT_LIST_DIR}/$(response).cpp"
